[tool.poetry]
name = "testhub"
version = "0.1.0"
description = ""
authors = ["KorotaevEgor <93511762+KorotaevvEgor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
